--- a/Applications/Actions/Server.ipynb
+++ b/Applications/Actions/Server.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Writing a Simple Action Server using the Execute Callback\n",
-    "This tutorial covers using the simple_action_server library to create a Fibonacci action server in Python. This example action server generates a Fibonacci sequence, the goal is the order of the sequence, the feedback is the sequence as it is computed, and the result is the final sequence.\n",
+    "This tutorial covers using the `simple_action_server` library to create a Fibonacci action server in Python. This example action server generates a Fibonacci sequence, the goal is the order of the sequence, the feedback is the sequence as it is computed, and the result is the final sequence.\n",
     "\n",
     "If the order of the sequence is greater than 100, the action is aborted by the server.\n",
     "\n",
