--- a/Applications/Services/Client.ipynb
+++ b/Applications/Services/Client.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The client code for calling services is also simple. For clients you don't have to call `init_node()`. We first call: "
+    "The client code for calling services is also simple. We first call: "
    ]
   },
   {
@@ -30,6 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "rospy.init_node('add_two_ints_client')\n",
     "rospy.wait_for_service('add_two_ints')"
    ]
   },
