--- a/Transform/Intro/turtlesim.ipynb
+++ b/Transform/Intro/turtlesim.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### turtlesim\n",
+    "### turtle_tf2_demo in turtlesim\n",
     "\n",
-    "So now we can run the `turtlesim_node` in the `turtlesim` package (the program runs headlessly so it needs a virtual framebuffer)."
+    "This command launches the simulator and the tf2 nodes:"
    ]
   },
   {
