--- a/Transform/Programming/Broadcaster.ipynb
+++ b/Transform/Programming/Broadcaster.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This node is subscribing to the pose topic of each turtle, and broadcasting the transformation of each turtle wrt the world frame.\n",
+    "\n",
+    "Make sure that [roscore](roscore.ipynb) and [turtlesim](turtlesim.ipynb) have been launched."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -13,6 +22,13 @@
     "import tf2_ros\n",
     "from geometry_msgs.msg import TransformStamped\n",
     "from turtlesim.msg import Pose"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following function is the callback that executes when a pose topic is received. The pose of the turtle is copied into a transform message, which is broadcasted."
    ]
   },
   {
@@ -41,12 +57,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "rospy.init_node('tf2_turtle_broadcaster')"
+    "In the rest of the code, we initialize the node, create both subscribers, and finally wait for messages."
    ]
   },
   {
@@ -55,39 +69,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "rospy.init_node('tf2_turtle_broadcaster')\n",
+    "\n",
     "turtle_name = 'turtle1'\n",
     "rospy.Subscriber('/%s/pose' % turtle_name, Pose,\n",
     "                 handle_turtle_pose,\n",
-    "                 turtle_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                 turtle_name)\n",
+    "\n",
     "turtle_name = 'turtle2'\n",
     "rospy.Subscriber('/%s/pose' % turtle_name, Pose,\n",
     "                 handle_turtle_pose,\n",
-    "                 turtle_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                 turtle_name)\n",
     "rospy.spin()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "If not done yet, please run now the [Listener notebook in the below tab](Listener.ipynb)."
+   ]
   }
  ],
  "metadata": {
