--- a/Transform/Programming/Listener.ipynb
+++ b/Transform/Programming/Listener.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This node is listening to the transformations and using a simple linear controller for driving turtle2 to follow turtle1."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -24,6 +31,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create the necessary data structures."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -31,6 +45,13 @@
    "source": [
     "tfBuffer = tf2_ros.Buffer()\n",
     "listener = tf2_ros.TransformListener(tfBuffer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to spawn the second turtle in the simulator."
    ]
   },
   {
@@ -46,6 +67,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create a topic publisher for sending velocity commands to the second turtle."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -54,6 +82,13 @@
     "turtle_vel = rospy.Publisher('%s/cmd_vel' % turtle_name, \\\n",
     "                             Twist, queue_size=1)\n",
     "rate = rospy.Rate(10.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this loop, we read the transformation between turtle2 and turtle1, compute the linear and angular velocities, and send them to the corresponding topic."
    ]
   },
   {
@@ -82,11 +117,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "You may teleoperate turtle1 for turtle2 to follow, by using [the notebook on the second tab of the upper-right window](Move_Turtle.ipynb)). "
+   ]
   }
  ],
  "metadata": {
