--- a/Transform/Programming/Move_Turtle.ipynb
+++ b/Transform/Programming/Move_Turtle.ipynb
@@ -1,12 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Teleoperating the turtle\n",
+    "First, we set the turtle pen color to red."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "rosservice call /turtle2/set_pen 255 0 0 2 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we publish into the velocity topic; please change the linear X velocity and the angular Z velocity to the values you want."
    ]
   },
   {
@@ -18,13 +33,6 @@
     "rostopic pub --once /turtle1/cmd_vel geometry_msgs/Twist \\\n",
     "'{linear:  {x: 5, y: 0.0, z: 0.0}, angular: {x: 0.0, y: 0.0, z: -3.6}}'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
