remove files and split sections

--- a/README.ipynb
+++ b/README.ipynb
@@ -17,18 +17,30 @@
     "\n",
     "## Transform Library\n",
     "* [Introduction to tf](Transform/Intro/index.ipynb)\n",
-    "* [Broadcaster and Listener in Python](Transform/Programming/index.ipynb)\n",
-    "\n",
+    "* [Broadcaster and Listener in Python](Transform/Programming/index.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<hr>\n",
     "\n",
     "### Licensing\n",
     "\n",
-    "This work, \"Interactive Tutorials for ROS-Industrial\", is a derivative of \"[ROS Tutorials](http://wiki.ros.org/ROS/Tutorials)\" by the [Open Source Robotics Foundation](http://www.osrfoundation.org/), used under [CC BY](https://creativecommons.org/licenses/by/3.0/), and \"[ROS-Industrial Training Material](http://ros-industrial.github.io/industrial_training/index.html)\" by the [ROS-Industrial Consortium](http://rosindustrial.org/ric), used under an [Apache License 2.0](https://www.apache.org/licenses/LICENSE-2.0).\n",
+    "This work, \"Interactive Tutorials for ROS-Industrial\", is a derivative of \"[ROS Tutorials](http://wiki.ros.org/ROS/Tutorials)\" by the [Open Source Robotics Foundation](https://www.openrobotics.org/), used under [CC BY](https://creativecommons.org/licenses/by/3.0/), and \"[ROS-Industrial Training Material](https://industrial-training-master.readthedocs.io/en/melodic/)\" by the [ROS-Industrial Consortium](http://rosindustrial.org/ric), used under an [Apache License 2.0](https://www.apache.org/licenses/LICENSE-2.0).\n",
     "\n",
     "<a href=\"http://robinlab.uji.es\"><img align=\"left\" src=\"img/robinlab_logo.png\"></a>\n",
-    "\"Interactive Tutorials for ROS-Industrial\" is licensed under an [Apache License 2.0](https://www.apache.org/licenses/LICENSE-2.0) by the [Robotic Intelligence Lab](http://robinlab.uji.es) of [Jaume-I University (Castelló, Spain)](http://www.uji.es).\n",
-    "\n",
+    "\"Interactive Tutorials for ROS-Industrial\" is licensed under an [Apache License 2.0](https://www.apache.org/licenses/LICENSE-2.0) by the [Robotic Intelligence Lab](http://robinlab.uji.es) of [Jaume-I University (Castelló, Spain)](http://www.uji.es)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<hr>\n",
+    "\n",
+    "### Acknowledgements\n",
     "\n",
     "<a href=\"http://rosin-project.eu\"><img style=\"margin: 0px 20px; float: left\" src=\"img/Logo_ROSIN.png\"></a>\n",
     "<img style=\"margin: 0px 20px; float: left\" src=\"img/EU-Flag.png\">\n",
